# komp

./: Cargo.toml  README.md
komp-cli/: Cargo.toml
komp-cli/src/: detect.rs  main.rs  pattern.rs  play.rs  setup.rs
komp-core/: Cargo.toml
komp-core/src/: chord.rs  key.rs  lib.rs
komp-devlog/: Blinking the LED with Embassy.md  Blinking the LED with RP-HAL-boards.md  Blinking the on-board LED.md  Communication between Picos.md  Detecting the picoprobe.md  Flashing the picoprobe.md  Getting started with embedded development.md  Misc stuff.md  Wiring the probe to the target.md
komp-emb/: dev.sh  drive.sh  play.sh
komp-emb/.cargo/: config.toml
komp-emb/driver/: Cargo.toml
komp-emb/player/: Cargo.toml
